compliance-view/old-manifests/viewer-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    alpha.image.policy.openshift.io/resolve-names: '*'
    image.openshift.io/triggers: '[{"from":{"kind":"ImageStreamTag","name":"compliance:latest","namespace":"report-view"},"fieldPath":"spec.template.spec.containers[?(@.name==\"compliance\")].image","pause":"false"}]'
  labels:
    app: compliance
    app.kubernetes.io/component: compliance
    app.kubernetes.io/instance: compliance
    app.kubernetes.io/name: compliance
    app.kubernetes.io/part-of: compliance-app
    app.openshift.io/runtime: compliance
    app.openshift.io/runtime-namespace: compliance
    app.openshift.io/runtime-version: latest
    requires-job: compliance
  name: compliance
  namespace: report-view
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: compliance
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: compliance
        deploymentconfig: compliance
    spec:
      containers:
      - image: image-registry.openshift-image-registry.svc:5000/report-view/compliance:latest
        imagePullPolicy: Always
        name: compliance
        ports:
        - containerPort: 8080
          protocol: TCP
        - containerPort: 8443
          protocol: TCP
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      terminationGracePeriodSeconds: 30
