compliance-view/old-manifests/viewer-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: compliance
    app.kubernetes.io/component: compliance
    app.kubernetes.io/instance: compliance
    app.kubernetes.io/name: compliance
    app.kubernetes.io/part-of: compliance-app
  name: compliance
  namespace: report-view
spec:
  port:
    targetPort: 8080-tcp
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: compliance
    weight: 100
  wildcardPolicy: None
